# getit

./: .gitignore  .travis.yml  BodyPageFormdata.qml  CMakeLists.txt  CenterTextMessage.qml  CmakeLists.txt  EditMenu.qml  FileMenu.qml  FormdataBody.qml  Gett.pro  HelpMenu.qml  KeyValueContainer.qml  KeyValuePair.qml  MainMenu.qml  MainToolbar.qml  RequestMenu.qml  RequestPages.qml  ResponsePage.qml  config.pri  main.cpp  main.qml  page_body.qml  qml.qrc  readme.md
src/: CMakeLists.txt  CmakeLists.txt  main.cpp  sources.pri  src.pro
src/domain/: CppRestRequest.cpp  CppRestRequest.hpp  CprRequest.cpp  CprRequest.hpp  FormdataElement.hpp  FormdataRequestBody.cpp  FormdataRequestBody.hpp  HttpRequestBody.hpp  HttpRequestLibrary.hpp  HttpRequestMethod.hpp  ICookie.hpp  IHeader.hpp  IResponse.hpp  RawRequestBody.cpp  RawRequestBody.hpp  Request.cpp  Request.hpp  RequestBody.hpp  RequestFactory.cpp  RequestFactory.hpp  Response.hpp
src/domain/exceptions/: ResponseNotSupportedException.cpp  ResponseNotSupportedException.hpp
src/domain/factories/: IResponseFactory.hpp  ResponseFactory.cpp  ResponseFactory.hpp
src/domain/requests/: IRequestBody.hpp  Request.cpp  Request.hpp
src/domain/requests/bodies/: FormdataRequestBody.cpp  FormdataRequestBody.hpp  JsonRequestBody.cpp  JsonRequestBody.hpp  RawRequestBody.cpp  RawRequestBody.hpp
src/domain/responses/: IResponse.hpp  JsonResponse.cpp  JsonResponse.hpp  RawResponse.cpp  RawResponse.hpp  Response.cpp  Response.hpp  XmlResponse.cpp  XmlResponse.hpp
src/getit_autogen/: moc_predefs.h  mocs_compilation.cpp
src/getit_autogen/MGP6DHOWP2/: moc_MainWindow.cpp
src/getit_autogen/NO6MIKJAUC/: moc_MainWindow.cpp
src/getit_autogen/include/: ui_MainWindow.h
src/gui/HeaderWidget/: HeaderControllerWidget.cpp  HeaderControllerWidget.hpp  HeaderControllerWidget.ui
src/gui/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/gui/RequestBody/: BodyControllerWidget.cpp  BodyControllerWidget.hpp  BodyControllerWidget.ui  BodyWidget.hpp
src/gui/RequestBody/FormdataRequestBody/: FormdataRequestBodyWidget.cpp  FormdataRequestBodyWidget.hpp  FormdataRequestBodyWidget.ui
src/gui/RequestBody/RawRequestBody/: RawRequestBodyWidget.cpp  RawRequestBodyWidget.hpp  RawRequestBodyWidget.ui
src/gui/ResponseControllerWidget/: ResponseControllerWidget.cpp  ResponseControllerWidget.hpp  ResponseControllerWidget.ui
src/gui/Widgets/: KeyValuePairWidget.ui
src/gui/widget/BodyWidget/: Body.hpp  BodyWidget.cpp  BodyWidget.hpp  BodyWidget.ui
src/gui/widget/FormdataBodyWidget/: FormdataBodyWidget.cpp  FormdataBodyWidget.hpp  FormdataBodyWidget.ui
src/gui/widget/FormdataWidget/: FormdataWidget.cpp  FormdataWidget.hpp  FormdataWidget.ui
src/gui/widget/HeaderWidget/: HeaderWidget.cpp  HeaderWidget.hpp  HeaderWidget.ui
src/gui/widget/HeadersWidget/: HeadersWidget.cpp  HeadersWidget.hpp  HeadersWidget.ui
src/gui/widget/ListItemWidget/: ListItemWidget.cpp  (+1 more)
src/repository/: FileRepository.cpp  FileRepository.hpp  Repository.hpp
src/ui/: MainWindow.hpp  mainwindow.cpp
(+32 files in other folders)
